[package]
name = "rbot-messages"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "*"
serde = {version = "*", features = ["derive"]}
serde_json = "*"

[lib]
name = "rbot-messages"
path = "src/lib.rs"
crate-type = ["cdylib", "staticlib", "lib"]
