[package]
name = "rbot-messages"
version = "0.1.0"
edition = "2021"
description = "The `rbot-messages` crate serves as the message handler for the Bot Beats game, containing all the message types to and from the game."
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "*"
serde = {version = "*", features = ["derive"]}
serde_json = "*"

[lib]
name = "rbot_messages"
path = "src/lib.rs"
crate-type = ["cdylib", "staticlib", "lib"]
